# cuda-at-scale-for-the-enterprise

./: CMakeLists.txt  README.md  gauss_filter.cu  gaussian_filter.cu
output/: wolf-filtered.pgm
